# Hackathon_project_1

./: .gitignore  CLAUDE.md  DEPLOYMENT.md  PROJECT_COMPLETION_REPORT.md  docusaurus.config.js  package-lock.json  package.json  sidebars.js
.claude/: settings.local.json
.specify/memory/: constitution.md
ai-humanoid/: package-lock.json  package.json  tsconfig.json
backend/: .env.example  README.md  main.py  pyproject.toml
docs/: README.md
docs/appendices/: _category_.json  glossary.mdx  hardware-software.mdx  index.mdx  lab-setup-tips.mdx  recommended-reading.mdx
docs/capstone-project/: _category_.json  implementation-guide.mdx  index.mdx  integration-ros2-isaac-vla.mdx  optional-extensions.mdx  testing-troubleshooting.mdx
docs/intro/: _category_.json  index.mdx
docs/module1-ros2/: _category_.json  index.mdx  rclpy-integration.mdx  ros2-architecture.mdx  ros2-exercises.mdx  ros2-package-project.mdx  urdf-humanoids.mdx
docs/module2-digital-twin/: _category_.json  collisions-dynamics.mdx  gazebo-unity-setup.mdx  index.mdx  physics-simulation.mdx  simulated-humanoid-lab.mdx  simulating-sensors.mdx
docs/module3-nvidia-isaac/: _category_.json  ai-perception-pipeline-lab.mdx  index.mdx  isaac-platform-overview.mdx  isaac-ros-perception.mdx  isaac-sim-photorealistic.mdx  nav2-path-planning.mdx  rl-robot-control.mdx  sim-to-real-transfer.mdx
docs/module4-vla/: _category_.json  index.mdx  llm-robotics-planning.mdx  multi-modal-interaction.mdx  voice-guided-lab.mdx  whisper-voice-action.mdx
specs/001-rag-content-ingestion/: data-model.md  plan.md  research.md  (+3 more)
(+38 files in other folders)
